--- a/PA2.ipynb
+++ b/PA2.ipynb
@@ -442,19 +442,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User-Movie Matrix Shape: (671, 9066)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from scipy.sparse.linalg import svds\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# 加载评分数据集\n",
-    "ratings = pd.read_csv('dataset/ratings.csv')\n",
+    "# 加载数据\n",
+    "ratings = pd.read_csv('dataset/ratings_small.csv')\n",
     "\n",
-    "# 查看数据基本信息\n",
-    "print(ratings.head())\n",
-    "print(ratings.info())\n"
+    "# 创建用户-电影评分矩阵\n",
+    "user_movie_matrix = ratings.pivot(index='userId', columns='movieId', values='rating').fillna(0)\n",
+    "\n",
+    "# 转换为矩阵形式\n",
+    "matrix = user_movie_matrix.values\n",
+    "print(f\"User-Movie Matrix Shape: {matrix.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVD 分解\n",
+    "u, sigma, vt = svds(matrix, k=50)  # k 是潜在因子数\n",
+    "sigma = np.diag(sigma)\n",
+    "\n",
+    "# 重构评分矩阵\n",
+    "predicted_ratings = np.dot(np.dot(u, sigma), vt)\n",
+    "\n",
+    "# 将预测评分矩阵转为 DataFrame\n",
+    "predicted_ratings_df = pd.DataFrame(predicted_ratings, index=user_movie_matrix.index, columns=user_movie_matrix.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_rating(user_id, movie_id):\n",
+    "    # 检查是否存在用户和电影\n",
+    "    if user_id in predicted_ratings_df.index and movie_id in predicted_ratings_df.columns:\n",
+    "        return predicted_ratings_df.loc[user_id, movie_id]\n",
+    "    else:\n",
+    "        # 如果用户或电影不存在，返回默认值（例如 0 或平均值）\n",
+    "        return 0  # 或者可以返回全局平均评分\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted rating for User 1 on Movie 110: 0.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 示例\n",
+    "user_id = 1\n",
+    "movie_id = 110\n",
+    "predicted_score = predict_rating(user_id, movie_id)\n",
+    "print(f\"Predicted rating for User {user_id} on Movie {movie_id}: {predicted_score:.2f}\")\n"
    ]
   }
  ],
