--- a/test.ipynb
+++ b/test.ipynb
@@ -186,12 +186,52 @@
    "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T08:42:53.057198Z",
+     "start_time": "2024-12-02T08:42:53.009983Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "7e2070f4ab442af8"
+   "source": [
+    "import torch\n",
+    "\n",
+    "def check_model(model_path='model/best_model.pt'):\n",
+    "    try:\n",
+    "        checkpoint = torch.load(model_path, map_location='cpu')\n",
+    "        print(\"Model state dict keys:\", checkpoint.keys())\n",
+    "        if 'user_mapping' in checkpoint:\n",
+    "            print(f\"Number of users in mapping: {len(checkpoint['user_mapping'])}\")\n",
+    "            print(\"Sample user mappings:\", list(checkpoint['user_mapping'].items())[:5])\n",
+    "        else:\n",
+    "            print(\"user_mapping not found in checkpoint.\")\n",
+    "        \n",
+    "        if 'item_mapping' in checkpoint:\n",
+    "            print(f\"Number of items in mapping: {len(checkpoint['item_mapping'])}\")\n",
+    "            print(\"Sample item mappings:\", list(checkpoint['item_mapping'].items())[:5])\n",
+    "        else:\n",
+    "            print(\"item_mapping not found in checkpoint.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading model: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    check_model()\n"
+   ],
+   "id": "7e2070f4ab442af8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model state dict keys: dict_keys(['model_state_dict', 'optimizer_state_dict', 'user_mapping', 'item_mapping', 'history', 'model_config'])\n",
+      "Number of users in mapping: 671\n",
+      "Sample user mappings: [(1, 0), (2, 1), (3, 2), (4, 3), (5, 4)]\n",
+      "Number of items in mapping: 9066\n",
+      "Sample item mappings: [(31, 0), (1029, 1), (1061, 2), (1129, 3), (1172, 4)]\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
